--- a/index.html
+++ b/index.html
@@ -1,93 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>School tution Website</title>
 
     <!----icons-->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a5afd6b58b.js" crossorigin="anonymous"></script>
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/a5afd6b58b.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!----google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
-
-
-</head>
-<body>
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!=================== NavBar ===============!>
     <nav>
-        <div class="container nav_container">
-        <a href="index.html"><h4>EGATOR</h4></a>
+      <div class="container nav_container">
+        <a href="index.html"><h4>SCIENCE COCHING</h4></a>
         <ul class="nav_menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="courses.html">Courses</a></li>
+          <li><a href="notes.html">Notes</a></li>
+          <li>
+            <a href="previousYearQuestionPaper.html"
+              >Previous Year Question Paper</a
+            >
+          </li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <button id="open-menu-button"><i class="ri-menu-line"></i></button>
-        <button id="close-menu-button"><i class="fa-solid fa-xmark"></i></button>
-        </div>
+        <button id="close-menu-button">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
     </nav>
     <!================== End of NavBAr============!>
 
-
-
     <!================== HEADER============!>
     <header>
-        <div class="container header_container">
-            <div class="header_left">
-                <h1>Grow your Skill to Advance your Career</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quos ea voluptas aliquam corrupti perferendis ex nihil placeat delectus magni.
-                </p>
-                <a href="courses.html" class="btn btn-primary">Get Started</a>
-
-            </div>
-
-            <div class="header_right">
-                <div class="header_right-image">
-                    <img src="./images/header.svg" alt="">
-                </div>
-
-            </div>
+      <div class="container header_container">
+        <div class="header_left">
+          <h1>
+            Grow your Skill <span>Learn With Science Coching Center</span>
+          </h1>
+          <p>The Ultimate Guide कक्षा 𝟏 से कक्षा 𝟏𝟐𝐭𝐡 तक</p>
+          <a href="courses.html" class="btn btn-primary">Get Started</a>
         </div>
+
+        <div class="header_right">
+          <div class="header_right-image">
+            <img src="./images/header.svg" alt="" />
+          </div>
+        </div>
+      </div>
     </header>
     <!================== End of HEADER============!>
 
-
-
     <section class="categories">
-        <div class="container categories_container">
-            <div class="categories-left">
-                <h1>Categories</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dolore aliquid quam fugit cupiditate laborum ex error facere sit ducimus eum asperiores, quo dolorem provident, ut animi. Quae, tenetur veritatis?
-                </p>
-                <a href="#" class="btn">Learn More</a>
-
-            </div>
-            <div class="categories_right">
-                <article class="category">
-                    <span class="category_icon"><i class="ri-bit-coin-line"></i></span>
-                    <h5>Blockchain</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae perspiciatis pariatur quod magni tempore cumque!</p>   41:10
-                    
-                </article>
-
-            </div>
+      <div class="container categories_container">
+        <div class="categories-left">
+          <h1>Categories</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+            dolore aliquid quam fugit cupiditate laborum ex error facere sit
+            ducimus eum asperiores, quo dolorem provident, ut animi. Quae,
+            tenetur veritatis?
+          </p>
+          <a href="#" class="btn">Learn More</a>
         </div>
+        <div class="categories_right">
+          <article class="category">
+            <span class="category_icon"><i class="ri-bit-coin-line"></i></span>
+            <h5>Blockchain</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              perspiciatis pariatur quod magni tempore cumque!
+            </p>
+            41:10
+          </article>
+        </div>
+      </div>
     </section>
-
-
-
-
-    
-</body>
+  </body>
 </html>
