--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     </header>
     <!================== End of HEADER============!>
 
+    <!================== CATEGORIES ============!>
     <section class="categories">
       <div class="container categories_container">
         <div class="categories-left">
@@ -83,16 +84,121 @@
         </div>
         <div class="categories_right">
           <article class="category">
-            <span class="category_icon"><i class="ri-bit-coin-line"></i></span>
-            <h5>Blockchain</h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              perspiciatis pariatur quod magni tempore cumque!
-            </p>
-            41:10
+            <span class="category_icon"
+              ><img class="baby-image" src="./images/1-5.png" alt=""
+            /></span>
+            <h5>Class (कक्षा) 1 to 5</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Be</p>
+          </article>
+
+          <article class="category">
+            <span class="category_icon"
+              ><img class="adult-image" src="./images/5-10.png" alt=""
+            /></span>
+            <h5>Class (कक्षा) 5 to 10</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Be</p>
+          </article>
+
+          <article class="category">
+            <span class="category_icon"
+              ><img class="adult-image" src="./images/5-10.png" alt=""
+            /></span>
+            <h5>Class (कक्षा) 1 to 5</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Be</p>
+          </article>
+
+          <article class="category">
+            <span class="category_icon"
+              ><img class="young-image" src="./images/10-12.png" alt=""
+            /></span>
+            <h5>Class (कक्षा) 10 to 12th Arts</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Be</p>
+          </article>
+
+          <article class="category">
+            <span class="category_icon"
+              ><img class="young-image" src="./images/10-12.png" alt=""
+            /></span>
+            <h5>Class (कक्षा) 10 to 12th Commerce</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Be</p>
+          </article>
+
+          <article class="category">
+            <span class="category_icon"
+              ><img class="young-image" src="./images/10-12.png" alt=""
+            /></span>
+            <h5>Class (कक्षा) 10 to 12th Science</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Be</p>
           </article>
         </div>
       </div>
     </section>
+    <!================== End of HEADER============!>
+
+    <!================== POPULAR COURCES ============!>
+
+    <section class="course">
+      <h2>Our Popular Courses</h2>
+      <div class="container courses_container">
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course1.png" alt="course1" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 10th Student</h4>
+            <p>
+              We teach Class 10th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+        <article class="courses">
+          <div class="course_image">
+            <img  class="courses2" src="./images/course2.png" alt="course2" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 11th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course3.png" alt="course3" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 12th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!================== END OF POPULAR COURCES ============!>
+
+
+    <!================== FREQUENTLY ASKED QUESTION ============!>
+
+    <section class="faqs">
+      <div class="container faqs_container">
+        <article class="faq">
+          <div class="faq_icon"></div>
+          <div class="question_answer"></div>                1hour
+        </article>
+      </div>
+    </section>
+
+    <!----Js-->
+    <script src="./main.js"></script>
   </body>
 </html>
