sidebar And testmonial

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       crossorigin="anonymous"
     ></script>
 
+<!----Swiper JS---->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+
+
     <!----google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -190,15 +194,167 @@
     <!================== FREQUENTLY ASKED QUESTION ============!>
 
     <section class="faqs">
+      <h2>Frequently Asked Question</h2>
       <div class="container faqs_container">
         <article class="faq">
-          <div class="faq_icon"></div>
-          <div class="question_answer"></div>                1hour
+          <div class="faq_icon"><i class="ri-add-fill"></i></div>
+          <div class="question_answer">
+            <h4>How Do i Know The Right Course for me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a rerum sint praesentium deleniti porro laboriosam, fugiat voluptate illo perspiciatis libero voluptatibus quibusdam expedita iusto, harum tempora possimus, in velit.</p>
+          </div>                
         </article>
-      </div>
-    </section>
 
-    <!----Js-->
+        <article class="faq">
+          <div class="faq_icon"><i class="ri-add-fill"></i></div>
+          <div class="question_answer">
+            <h4>How Do i Know The Right Course for me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a rerum sint praesentium deleniti porro laboriosam, fugiat voluptate illo perspiciatis libero voluptatibus quibusdam expedita iusto, harum tempora possimus, in velit.</p>
+          </div>                
+        </article>
+
+        <article class="faq">
+          <div class="faq_icon"><i class="ri-add-fill"></i></div>
+          <div class="question_answer">
+            <h4>How Do i Know The Right Course for me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a rerum sint praesentium deleniti porro laboriosam, fugiat voluptate illo perspiciatis libero voluptatibus quibusdam expedita iusto, harum tempora possimus, in velit.</p>
+          </div>                
+        </article>
+
+        <article class="faq">
+          <div class="faq_icon"><i class="ri-add-fill"></i></div>
+          <div class="question_answer">
+            <h4>How Do i Know The Right Course for me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a rerum sint praesentium deleniti porro laboriosam, fugiat voluptate illo perspiciatis libero voluptatibus quibusdam expedita iusto, harum tempora possimus, in velit.</p>
+          </div>                
+        </article>
+
+
+        <article class="faq">
+          <div class="faq_icon"><i class="ri-add-fill"></i></div>
+          <div class="question_answer">
+            <h4>How Do i Know The Right Course for me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a rerum sint praesentium deleniti porro laboriosam, fugiat voluptate illo perspiciatis libero voluptatibus quibusdam expedita iusto, harum tempora possimus, in velit.</p>
+          </div>                
+        </article>
+
+
+        <article class="faq">
+          <div class="faq_icon"><i class="ri-add-fill"></i></div>
+          <div class="question_answer">
+            <h4>How Do i Know The Right Course for me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a rerum sint praesentium deleniti porro laboriosam, fugiat voluptate illo perspiciatis libero voluptatibus quibusdam expedita iusto, harum tempora possimus, in velit.</p>
+          </div>                
+        </article>
+        </div>
+        </section>
+
+    <!================== END OF FREQUENTLY ASKED QUESTION ============!>
+
+
+
+
+    <!================== STUDENT TESTIMONIALS ============!>
+    <section class="container testimonials_container swiper mySwiper">
+      <h2>Students' Testimonials</h2>
+      <div class="swiper-wrapper">
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar1.jpg" alt="avatar1">
+          </div>
+          <div class="testimonial_info">
+            <h5>Vibhu</h5>
+            <small>Student Class 12th</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam quae quasi distinctio rerum rem nisi dicta voluptatum officia animi quidem.
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar2.jpg" alt="avatar2">
+          </div>
+          <div class="testimonial_info">
+            <h5>Prince Science 12th</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam quae quasi distinctio rerum rem nisi dicta voluptatum officia animi quidem.
+            </p>
+          </div>
+        </article>
+
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar3.jpg" alt="avatar3">
+          </div>
+          <div class="testimonial_info">
+            <h5>Aditya</h5>
+            <small>Student 10th</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam quae quasi distinctio rerum rem nisi dicta voluptatum officia animi quidem.
+            </p>
+          </div>
+        </article>
+
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar4.jpg" alt="avatar4">
+          </div>
+          <div class="testimonial_info">
+            <h5>Anshula class-11th</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam quae quasi distinctio rerum rem nisi dicta voluptatum officia animi quidem.
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="./images/avatar5.jpg" alt="avatar5">
+          </div>
+          <div class="testimonial_info">
+            <h5>Anisha class-12th</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam quae quasi distinctio rerum rem nisi dicta voluptatum officia animi quidem.
+            </p>
+          </div>
+        </article>
+
+      </div>
+    </section>          1:15min
+
+
+    <!----Js----->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
+
+
+    <!----Js SLIDER----->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },     1:25
+      });
+    </script>
+<!----Js SLIDER End----->
+
   </body>
 </html>
