--- a/index.html
+++ b/index.html
@@ -391,8 +391,9 @@
             </li>
           </ul>
         </div>
-        <div class="footer_copyright"></div>
-        <small>Copyright  </small>
+        <div class="footer_copyright">
+        <small>Copyright &copy; You tube tutorial </small>
+      </div>
 
       </div>
     </footer>
