Adding new Features in About Page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>School tution Website</title>
+    <link rel="stylesheet" href="css/about.css" />
+    
+    <title> ABOUT School tution Website</title>
 
     <!----icons-->
     <link
@@ -15,9 +17,6 @@
       src="https://kit.fontawesome.com/a5afd6b58b.js"
       crossorigin="anonymous"
     ></script>
-
-
-
 
     <!----google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,8 +49,53 @@
         </button>
       </div>
     </nav>
-
     <!================== End of NavBAr============!>
+
+
+    <!=================== Achivement ===============!>
+
+    <section class="about_achievements">
+      <div class="container about_achievement-container">
+        <div class="about_achievement-left">
+        <img src="images/about achievements.svg" alt="achievement">
+      </div>
+
+      <div class="about_achievement-right">
+        <h1>Acheivements</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, repellat unde ab reiciendis possimus optio repudiandae nisi aliquam fuga itaque omnis architecto quasi ipsum aspernatur illo officia autem repellendus perspiciatis.</p>
+
+        <div class="achievements_cards">
+
+          <article class="achievement_card">
+            <span class="achivement_icon">
+              <i class="ri-vidicon-line"></i>
+            </span>
+            <h3>200+</h3>
+            <p>1-9 Student</p>
+          </article>
+
+          <article class="achievement_card">
+            <span class="achivement_icon">
+              <i class="ri-user-heart-fill"></i>
+            </span>
+            <h3>150+</h3>
+            <p>10th Student</p>
+          </article>
+
+
+          <article class="achievement_card">
+            <span class="achivement_icon">
+              <i class="ri-graduation-cap-line"></i>
+            </span>
+            <h3>100+</h3>
+            <p>12th Student</p>
+          </article>
+
+
+        </div>
+      </div>
+    </div>
+    </section>
 
 
 
