--- a/about.html
+++ b/about.html
@@ -1,117 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css" />
-    
-    <title> ABOUT School tution Website</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/about.css">
+
+
 
     <!----icons-->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/a5afd6b58b.js"
       crossorigin="anonymous"
     ></script>
 
-    <!----google font-->
+     <!---- END of icons-->
+
+     <!----google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <!=================== NavBar ===============!>
-    <nav>
-      <div class="container nav_container">
-        <a href="index.html"><h4>SCIENCE COCHING</h4></a>
-        <ul class="nav_menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="notes.html">Notes</a></li>
-          <li>
-            <a href="previousYearQuestionPaper.html"
-              >Previous Year Question Paper</a
-            >
-          </li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-        <button id="open-menu-button"><i class="ri-menu-line"></i></button>
-        <button id="close-menu-button">
-          <i class="fa-solid fa-xmark"></i>
-        </button>
-      </div>
-    </nav>
-    <!================== End of NavBAr============!>
 
 
-    <!=================== Achivement ===============!>
-
-    <section class="about_achievements">
-      <div class="container about_achievement-container">
-        <div class="about_achievement-left">
-        <img src="images/about achievements.svg" alt="achievement">
-      </div>
-
-      <div class="about_achievement-right">
-        <h1>Acheivements</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, repellat unde ab reiciendis possimus optio repudiandae nisi aliquam fuga itaque omnis architecto quasi ipsum aspernatur illo officia autem repellendus perspiciatis.</p>
-
-        <div class="achievements_cards">
-
-          <article class="achievement_card">
-            <span class="achivement_icon">
-              <i class="ri-vidicon-line"></i>
-            </span>
-            <h3>200+</h3>
-            <p>1-9 Student</p>
-          </article>
-
-          <article class="achievement_card">
-            <span class="achivement_icon">
-              <i class="ri-user-heart-fill"></i>
-            </span>
-            <h3>150+</h3>
-            <p>10th Student</p>
-          </article>
-
-
-          <article class="achievement_card">
-            <span class="achivement_icon">
-              <i class="ri-graduation-cap-line"></i>
-            </span>
-            <h3>100+</h3>
-            <p>12th Student</p>
-          </article>
-
-
-        </div>
-      </div>
+  <title>About Page</title>
+</head>
+<body>
+  
+  <!=================== NavBar ===============!>
+  <nav>
+    <div class="container nav_container">
+      <a href="index.html"><h4>SCIENCE COCHING</h4></a>
+      <ul class="nav_menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="notes.html">Notes</a></li>
+        <li>
+          <a href="previousYearQuestionPaper.html"
+            >Previous Year Question Paper</a
+          >
+        </li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <button id="open-menu-button"><i class="ri-menu-line"></i></button>
+      <button id="close-menu-button">
+        <i class="fa-solid fa-xmark"></i>
+      </button>
     </div>
-    </section>
+  </nav>
+  <!================== End of NavBAr============!>  
 
 
 
 
 
+<!=================== Achivement ===============!>
+
+<section class="about_achievements">
+  <div class="container about_achievement-container">
+    <div class="about_achievement-left">
+    <img src="images/about achievements.svg" alt="achievement">
+  </div>
+
+  <div class="about_achievement-right">
+    <h1>Acheivements</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, repellat unde ab reiciendis possimus optio repudiandae nisi aliquam fuga itaque omnis architecto quasi ipsum aspernatur illo officia autem repellendus perspiciatis.</p>
+
+    <div class="achievements_cards">
+
+      <article class="achievement_card">
+        <span class="achivement_icon">
+          <i class="ri-vidicon-line"></i>
+        </span>
+        <h3>200+</h3>
+        <p>1-9th Student</p>
+      </article>
+
+      <article class="achievement_card">
+        <span class="achivement_icon">
+          <i class="ri-user-heart-fill"></i>
+        </span>
+        <h3>150+</h3>
+        <p>10th Student</p>
+      </article>
 
 
+      <article class="achievement_card">
+        <span class="achivement_icon">
+          <i class="ri-graduation-cap-line"></i>
+        </span>
+        <h3>100+</h3>
+        <p>12th Student</p>
+      </article>
 
 
+    </div>
+  </div>
+</div>
+</section>
+
+<!=================== End of Achivement ===============!>
 
 
+<!=================== OUR TEACHERS ===============!>
+
+<section class="team">
+  <h2>Meet Our Teachers</h2>
+  <div class="container team_container">
 
 
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm1.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Abhay Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm2.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Ritik Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
 
 
-    <!================== Footer ============!>
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm3.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Rohan Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm4.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Nitish Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm5.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Ahmad Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm6.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Kunal Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm7.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>abhiskhek Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm8.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Sweety Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+  </div>
+
+</section>
+
+
+  <!================== Footer ============!>
     <footer class="footer">
       <div class="container footer_container">
         <div class="footer-1">
@@ -166,8 +319,13 @@
 
       </div>
     </footer>
-
-    <script src="./main.js"></script>
-  </body>
-  </html>
     <!================== END OF Footer ============!>
+
+
+
+
+  <script src="./main.js"></script>
+  <link rel="stylesheet" href="css/about.css">
+
+</body>
+</html>
