--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!----CSS-->
 
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/about.css" /> -->
+    <link rel="stylesheet" href="css/about.css" />
     <title>School tution Website</title>
 
     <!----icons-->
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/a5afd6b58b.js"
       crossorigin="anonymous"
