creating the about page

--- a/about.html
+++ b/about.html
@@ -263,6 +263,9 @@
 
 </section>
 
+<!=================== END OF OUR TEACHERS ===============!>
+
+
 
   <!================== Footer ============!>
     <footer class="footer">
