--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,14 @@
 
 
 
+<!================== Contact ============!>
+
+<section class="contact">
+  <div class="container contact_container">
+    
+  </div>
+</section>
+
 
 
 
