--- a/courses.html
+++ b/courses.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/courses.css">
+  <link rel="stylesheet" href="css/about.css">
 
 
 
@@ -29,6 +30,14 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
+
+<!----STYLE SHEET-->
+<style>
+  .Courses{
+    margin-top: 1rem;
+  }
+</style>
+    
 
 
   <title>Courses</title>
@@ -58,6 +67,264 @@
     </div>
   </nav>
   <!================== End of NavBAr============!>  
+
+
+
+
+  <!================== POPULAR COURCES ============!>
+
+    <section class="course">
+      <h2>Our Popular Courses</h2>
+      <div class="container courses_container">
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course1.png" alt="course1" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 10th Student</h4>
+            <p>
+              We teach Class 10th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+        <article class="courses">
+          <div class="course_image">
+            <img  class="courses2" src="./images/course2.png" alt="course2" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 11th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course3.png" alt="course3" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 12th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course3.png" alt="course3" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 12th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course3.png" alt="course3" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 12th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+
+
+        <article class="courses">
+          <div class="course_image">
+            <img src="./images/course3.png" alt="course3" />
+          </div>
+          <div class="course_info">
+            <h4>We Teach Class 12th Student</h4>
+            <p>
+              We teach Class 11th All subject at one place in Affordable fees
+              with our Highly Quilfied Teacher
+            </p>
+            <a href="./courses.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+
+
+      </div>
+    </section>
+
+    
+
+    <!================== END OF POPULAR COURCES ============!>
+
+
+    <!=================== OUR TEACHERS ===============!>
+
+<section class="team">
+  <h2>Meet Our Toppers</h2>
+  <div class="container team_container">
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm1.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Abhay Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm2.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Ritik Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm3.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Rohan Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm4.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Nitish Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm5.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Ahmad Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm6.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Kunal Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm7.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>abhiskhek Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+    <article class="team_member">
+      <div class="team_member-image">
+        <img src="images/tm8.jpg" alt="">
+      </div>
+      <div class="team_member-info">
+        <h4>Sweety Kumar</h4>
+        <p>Export Tutor</p>
+      </div>
+      <div class="team_member-social">
+        <a href="#insta" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+
+        <a href="#twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+        <a href="#linkdin" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+      </div>
+    </article>
+
+
+  </div>
+
+</section>
+
+<!=================== END OF OUR TEACHERS ===============!>
 
 
 
