--- a/about.html
+++ b/about.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="css/about.css">
 
 
+  <style>
+    body{
+      background-image: url("./images/bg-texture.png");
+    }
+  </style>
+
+  
 
     <!----icons-->
     <link
