--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/courses.css">
+  <link rel="stylesheet" href="css/contact.css">
 
 
+  <style>
+    body{
+      background-image: url("./images/bg-texture.png");
+    }
+  </style>
 
     <!----icons-->
     <link
@@ -65,7 +70,54 @@
 
 <section class="contact">
   <div class="container contact_container">
-    
+    <aside class="contact_aside">
+      <div class="aside_image">
+        <img src="images/contact.svg" alt="contact_image">
+      </div>
+
+    <h2>Contact Us </h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione error dolorum, cupiditate eligendi similique alias ullam ad eos ipsum, aspernatur rem, consequatur ipsam natus. Reprehenderit eius amet modi sint consequuntur?
+    </p>
+    <ul class="contact_details">
+      <li>
+        <i class="fa-solid fa-phone"></i>
+        <h5>+91968776473</h5>
+      </li>
+
+      <li>
+        <i class="fa-regular fa-envelope"></i>
+        <h5>vik6026717961@gmail.com</h5>
+      </li>
+
+      <li>
+        <i class="fa-solid fa-location-dot"></i>
+        <h5>Motipur Muzaffarpur</h5>
+      </li>
+
+    </ul>
+
+    <ul class="contact_socials">
+      <li> <a href="https://www.facebook.com/"> <i class="fa-brands fa-facebook"></i> </a></li>
+      <li> <a href="https://www.instagram.com/"> <i class="fa-brands fa-instagram"></i> </a></li>
+      <li> <a href="https://www.twitter.com/"> <i class="fa-brands fa-twitter"></i> </a></li>
+      <li> <a href="https://www.linkedin.com/"> <i class="fa-brands fa-linkedin"></i> </a></li>
+    </ul>
+    </aside>
+
+
+
+
+    <form action="https://formspree.io/f/myyqyogd" method="POST" class="contact_form" >
+      <div class="form_name">
+        <input type="text" name="First Name" placeholder="First Name" required>
+        <input type="text" name="Last Name" placeholder="Last Name" required>
+      </div>
+      <input type="email" name="Email Address" placeholder="Your Email Address" required>
+      <input type="tel" name="Phone Number" placeholder="Your Phone Number" required>
+      <textarea name="Message"  rows="7"  placeholder="Message" required></textarea>
+      <button type="submit" class="btn btn_primary">Send Message</button>
+    </form>
   </div>
 </section>
 
