--- a/courses.html
+++ b/courses.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/about.css">
 
 
+  <style>
+    body{
+      background-image: url("./images/bg-texture.png");
+    }
+  </style>
 
     <!----icons-->
     <link
