--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/about.css" />
+
+
+
+    <style>
+      body{
+        background-image: url("./images/bg-texture.png");
+      }
+    </style>
     <title>School tution Website</title>
 
     <!----icons-->
