Today Create Notes Section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         background-image: url("./images/bg-texture.png");
       }
     </style>
+    
     <title>School tution Website</title>
 
     <!----icons-->
@@ -49,14 +50,12 @@
         <ul class="nav_menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="courses.html">Courses</a></li>
-          <li><a href="notes.html">Notes</a></li>
-          <li>
-            <a href="previousYearQuestionPaper.html"
-              >Previous Year Question Paper</a
-            >
-          </li>
+          <li><a href="notes.html">Notes || PYQP</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
+          <div class="login">
+          <li><a href="#login">LogIn/Sign Up</a></li>
+        </div>
         </ul>
         <button id="open-menu-button"><i class="ri-menu-line"></i></button>
         <button id="close-menu-button">
