--- a/about.html
+++ b/about.html
@@ -43,29 +43,26 @@
 <body>
   
   <!=================== NavBar ===============!>
-  <nav>
-    <div class="container nav_container">
-      <a href="index.html"><h4>SCIENCE COCHING</h4></a>
-      <ul class="nav_menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="courses.html">Courses</a></li>
-        <li><a href="notes.html">Notes</a></li>
-        <li>
-          <a href="previousYearQuestionPaper.html"
-            >Previous Year Question Paper</a
-          >
-        </li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-      <button id="open-menu-button"><i class="ri-menu-line"></i></button>
-      <button id="close-menu-button">
-        <i class="fa-solid fa-xmark"></i>
-      </button>
-    </div>
-  </nav>
-  <!================== End of NavBAr============!>  
-
+    <nav>
+      <div class="container nav_container">
+        <a href="index.html"><h4>SCIENCE COCHING</h4></a>
+        <ul class="nav_menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="courses.html">Courses</a></li>
+          <li><a href="notes.html">Notes || PYQP</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <div class="login">
+          <li><a href="#login">LogIn/Sign Up</a></li>
+        </div>
+        </ul>
+        <button id="open-menu-button"><i class="ri-menu-line"></i></button>
+        <button id="close-menu-button">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
+    </nav>
+    <!================== End of NavBAr============!>
 
 
 
