--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       crossorigin="anonymous"
     ></script>
 
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
 <!----Swiper JS---->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
@@ -42,7 +44,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body >
     <!=================== NavBar ===============!>
     <nav>
       <div class="container nav_container">
@@ -54,7 +56,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <div class="login">
-          <li><a href="#login">LogIn/Sign Up</a></li>
+          <li><a href="#login" onclick="showModal()">LogIn/Sign Up</a></li>
         </div>
         </ul>
         <button id="open-menu-button"><i class="ri-menu-line"></i></button>
@@ -64,6 +66,98 @@
       </div>
     </nav>
     <!================== End of NavBAr============!>
+
+    <!================== Signup popup modal ============!>
+
+    <div class="container_main_form">
+      <div class="forms-container">
+          <div class="signin-signup">
+          <form class="sign-in-form">
+              <h2 class="title">Sign In</h2>
+              <div class="input-field">
+                  <i class='bx bxs-user'></i>
+                  <input type="text" placeholder="Username">
+              </div>
+              <div class="input-field">
+                  <i class='bx bxs-lock-alt'></i>
+                  <input type="password" placeholder="Password">
+              </div>
+              <input type="submit" value="Login" class="btn_modal solid">
+              <p class="social-text">Or sign in with social platforms</p>
+
+              <div class="social-media">
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-facebook'></i>
+                  </a>
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-twitter'></i>
+                  </a>
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-google'></i>
+                  </a>
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-linkedin'></i>
+                  </a>
+              </div>
+          </form>
+          <form class="sign-up-form">
+              <h2 class="title">Sign Up</h2>
+              <div class="input-field">
+                  <i class='bx bxs-user'></i>
+                  <input type="text" placeholder="Username">
+              </div>
+              <div class="input-field">
+                  <i class='bx bxs-envelope'></i>
+                  <input type="text" placeholder="Email">
+              </div>
+              <div class="input-field">
+                  <i class='bx bxs-lock-alt'></i>
+                  <input type="password" placeholder="Password">
+              </div>
+              <input type="submit" value="Sign Up" class="btn solid">
+              <p class="social-text">Or sign up with social platforms</p>
+
+              <div class="social-media">
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-facebook'></i>
+                  </a>
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-twitter'></i>
+                  </a>
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-google'></i>
+                  </a>
+                  <a href="#" class="social-icon">
+                      <i class='bx bxl-linkedin'></i>
+                  </a>
+              </div>
+          </form>
+          </div>
+      </div>
+      <div class="panels-container">
+          <div class="panel left-panel">
+              <div class="content">
+                  <h3>New here?</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, illo. Vitae, nesciunt.
+                  </p>
+                  <button class="btn_modal transparent" id="sign-up-btn">Sign up</button>
+              </div>
+              <img src="/images/Profiling_Monochromatic.png" class="image" alt="">
+          </div>
+          <div class="panel right-panel">
+              <div class="content">
+                  <h3>One of us?</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, illo. Vitae, nesciunt.
+                  </p>
+                  <button class="btn_modal transparent" id="sign-in-btn">Sign in</button>
+              </div>
+              <img src="/images/Authentication_Outline.png" class="image" alt="">
+          </div>
+      </div>
+  </div>
+
+  <!================== END OF Signup popup modal ============!>
+
 
     <!================== HEADER============!>
     <header>
@@ -353,6 +447,8 @@
     </section>
 
     <!================== END OF STUDENT TESTIMONIALS ============!>
+
+   
     
     <!================== Footer ============!>
     <footer class="footer">
