--- a/courses.html
+++ b/courses.html
@@ -59,7 +59,7 @@
           <li><a href="notes.html">Notes || PYQP</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li class="login_signup_nav" ><a href="#login" onclick="logout()">Log Out</a></li>
+          <li><a href="index.html"> Log Out</a></li>
         </ul>
         <button id="open-menu-button"><i class="ri-menu-line"></i></button>
         <button id="close-menu-button">
